--- a/index.html
+++ b/index.html
@@ -495,13 +495,14 @@
         // REPLACE WITH YOUR FIREBASE CONFIG
         // Get this from Firebase Console > Project Settings > General > Your apps > SDK setup and configuration
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "your-project.firebaseapp.com",
-            databaseURL: "https://your-project-default-rtdb.firebaseio.com",
-            projectId: "your-project",
-            storageBucket: "your-project.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "1:123456789:web:abcdef123456"
+              apiKey: "AIzaSyBmLF7qqeSotu6Rhkx3SXxxxhcqpHL7p2k",
+              authDomain: "kova-85c6b.firebaseapp.com",
+              databaseURL: "https://kova-85c6b-default-rtdb.europe-west1.firebasedatabase.app",
+              projectId: "kova-85c6b",
+              storageBucket: "kova-85c6b.firebasestorage.app",
+              messagingSenderId: "472789298075",
+              appId: "1:472789298075:web:5e6a85924ea1fe269e0f3e",
+              measurementId: "G-FZR41E5810"
         };
         
         // Initialize Firebase
